Version 1.3.4 (GitHub, 2025-02-14)
	o Classplot takes not sample for visualization if more than 5000 points are used. Sample plottet is optimal regarding visualization.
	
Version 1.3.3 (CRAN, 2025-01-26)
	o Classplot plots now small classes on top, if boolean SmallClassesOnTop is set true
	o Meanrobust and Stdrobust accept now both trim parameters in percent
	o PDEnormrobust input parameters extended to set two and three sigma environment 
	o ParetoDensityEstimation warnings corrected if data exists outside of user set kernels
	o ClassBarPlot function plots values for each class and instance as bar plot with optional error deviation
	o ROC function plots the receiver operating characteristic curve in plotly
	
Version 1.3.2 (CRAN, 2023-10-10)
	o ClassMDplot now allows to set the color if each violin
	o Fanplot and Piechart: changed color palette
	o Fanplot: corrected plotrix function so that colors are mapped more consistently 	
	o InpectVariable: xlim can now be set for optimal histogram and not only for PDEplot	
	o Moved RobustNormalization and RobustNorm_BackTrafo from DatabionicSwarm package available on CRAN
	o Provids first crude version of combining several plots in one layout called Multiplot
	
Version 1.3.1 (GitHub, 2023-07-17)
	o Added access to Meanrobust and Stdrobust for users
	o Multiplot now does not plot single plots if output is not saved with function call.
	
Version 1.3.2 (CRAN, 2023-10-10)
	o ClassMDplot now allows to set the color if each violin
	o Fanplot and Piechart: changed color palette
	o Fanplot: corrected plotrix function so that colors are mapped more consistently 	
	o InpectVariable: xlim can now be set for optimal histogram and not only for PDEplot	
	o Moved RobustNormalization and RobustNorm_BackTrafo from DatabionicSwarm package available on CRAN
	o Provides first crude version of combining several plots in one layout called Multiplot
		
Version 1.3.1 (CRAN, 2023-07-18)
	o Minor adaptations for CRAN